# qt_study

./: .clang-format  .gitignore  CMakeLists.txt  Radar.pro  bsp_config.h  common.h  compile_flags.txt  config.ini  deploy.pri  main.cpp  mainwindow.cpp  mainwindow.cpp~RF2c8ed598.TMP  mainwindow.cpp~RF4121e5f1.TMP  mainwindow.cpp~RF412c2d2b.TMP  mainwindow.cpp~RF7f6d1ed.TMP  mainwindow.h  mainwindow.ui  noteinfo.cpp  noteinfo.h  noteinfo.ui  protocol.cpp  protocol.h  radarchart.cpp  radarchart.h  res.qrc  save.cpp  save.h  stable.h  threadparse.cpp  threadparse.h  udpClient.py  udpserver.cpp  udpserver.h  version.rc
.github/workflows/: windows-mingw.yml
Radar/: config.ini
benchmark/: CMakeLists.txt  bench_drawLineWithAngle.cpp  benchmark.cpp  optimization.cpp
doc/: README.md  debug.md  ssd_search.pcapng  tracker.txt  无人机雷达激光器状态.pcapng  海洋雷达激光器关光.pcapng  海洋雷达激光器开光.pcapng  海洋雷达激光器读状态.pcapng  蜈支洲岛航高300m的航线组合.txt  陆地雷达开始存储文件.pcapng  陆地雷达激光器关光.pcapng  陆地雷达激光器出光.pcapng  陆地雷达激光器设置电流.pcapng  陆地雷达激光器读取温度.pcapng  陆地雷达激光器读取电流.pcapng  陆地雷达激光器读取频率.pcapng  陆地雷达电机设置0转速.pcapng  陆地雷达电机设置100转速（首次）.pcapng  陆地雷达电机设置222转速（非首次).pcapng  陆地雷达电机读取转速（0）.pcapng  陆地雷达电机读取转速（100）.pcapng  陆地雷达电机读取转速（222）.pcapng  陆地雷达设置预览参数.pcapng
doc/gps/: applanix.txt  xw-gi5610.txt  xw-gi7660.txt
doc/laser/: 20220830上光所水下扫描激光雷达5kHz重频激光器通信协议客户版.xlsx
doc/laser/（无人机雷达）激光器通信协议/: 自适应通讯协议_驱动部分.xls
doc/无人机雷达通信协议/: 自适应通讯协议_驱动部分.xls
doc/（无人机雷达）激光器通信协议/: 自适应通讯协议_主控部分.xls  自适应通讯协议_温控部分.xls  自适应通讯协议_驱动部分.xls
inc/: chartview.h
qss/: app.rc  basic.css  basic.qss
script/: all.pcapng  attitudeUp80600001.pcapng  check_airway.txt  extract_gps_info.py  extract_info1.py  generate_gps_track.py  generate_land_data.py  gps_data.txt  test_attitude.py  test_gps.py  test_gps2.py  test_laserUpPara.py  test_loss_data_in_ssd.py  test_pcapng.py  test_ssd_data.py  tmp.py  udpClient.py  udpServer.py  udp_protocol.py  underWater_laserUp.pcapng  visualize_airline.py
scripts/: windows-mingw-publish.ps1
src/: CMakeLists.txt  chartview.cpp  common.h
src/ADControll/: ADControl.h
src/BitColorMap/: BitColorData.cpp  BitColorData.h  BitColorMap.cpp  BitColorMap.h  BitColorMap.pri  CRadar.h
src/ChartView/: chartview.cpp  chartview.h
src/DevInfo/: DevInfo.cpp  DevInfo.h  DevInfo.pri
src/NoteInfo/: NoteInfo.pri  noteinfo.h  noteinfo.ui
src/Protocol/: AdSampleControl.h  DoubleWaveProtocol.cpp  DoubleWaveProtocol.h  PreviewProcess.cpp  PreviewProcess.h  ProtocolDispatch.cpp  ProtocolDispatch.h  RadarProtocolBasic.cpp  RadarProtocolBasic.h  protocol.h  protocol.pri
src/RadarWidget/: radarwidget.cpp  radarwidget.h  radarwidget.pri  radarwidget.ui
src/ShowWave/: getWaveShow.cpp  getWaveShow.h  waveData.h  waveShow.cpp  waveShow.h
src/UdpProcess/: udpserver.cpp  udpserver.h
src/UpdateBin/: UpdateBin.cpp  UpdateBin.h  UpdateBin.pri
src/attitudeSensor/: AttitudeSensor.h
src/common/: bsp_config.h  common.h  common.pri
src/gpsInfo/: gpsInfo.h
src/laser/: LaserController.h  LaserController.pri  laserType1.cpp  laserType1.h  laserType2.cpp  laserType2.h  laserType3.cpp  laserType3.h  laserType4.cpp  laserType4.h  laserType5.cpp  laserType5.h  laserType6.cpp  laserType6.h  laserType8.cpp  laserType8.h
src/mainwindow/: main.cpp  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.cpp1  mainwindow.h  mainwindow.h1  mainwindow.pri  mainwindow.ui  radarwidget.cpp  radarwidget.h  radarwidget.ui
src/motor/: ElmoController.cpp  ElmoController.h  Epos2Controller.cpp  Epos2Controller.h  Epos4Controller.cpp  Epos4Controller.h  MotorController.h  MotorController.pri  PusiController.cpp  PusiController.h
src/navigation/: AirArea.cpp  AirArea.h  CoordCompute.cpp  CoordCompute.h  LineWithArrow.cpp  LineWithArrow.h  MapView.cpp  MapView.h  main.cpp  navigation.cpp  navigation.h  navigation.pri  navigation.ui
src/saveWave/: ReadHardDisk.cpp  ReadHardDisk.h  ReadHardDisk.pri  SavePreviewData.h  SaveWave.cpp  SaveWave.h  SaveWave.pri
src/sensors/: ADControl.h  AttitudeSensor.h  DAControl.h  gpsInfo.h  ms5837.h  sensors.pri
src/third_lib/QCustomPlot/: CMakeLists.txt  qcustomplot.cpp  qcustomplot.h  qcustomplot.pri
src/wave/: OfflineWaveform.cpp  OfflineWaveform.h  OnlineWaveform.cpp  OnlineWaveform.h  WaveExtract.cpp  WaveExtract.h  getWaveData.h  wave.pri
tests/: CMakeLists.txt  test_AirArea.cpp  test_common.cpp
ui/: mainwidget.ui  mainwindow.ui  navigation.ui  noteinfo.ui  radarwidget.ui  save.ui
